--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
   ],
   "require": {
     "yiisoft/yii2": "~2.0.6",
-    "league/oauth2-server": "*",
-    "guzzlehttp/guzzle": "*"
+    "league/oauth2-server": "^8.4",
+    "guzzlehttp/guzzle": "^7.7"  
   },
   "autoload": {
     "psr-4": {
