--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     }
   ],
   "require": {
+    "php": ">=8.0|>=8.2",
     "yiisoft/yii2": "~2.0.6",
     "league/oauth2-server": "^8.4",
     "guzzlehttp/guzzle": "^7.7"  
